# google-drive-downloader

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: CI.yml
google_drive_downloader/: __init__.py  cli.py  google_drive_downloader.py
src/googledrivedownloader/: __init__.py  download.py
